ingressroutes.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: simpleingressroute
    namespace: default
spec:
    entryPoints:
        - web
    routes:
        - match: Host(`whoami.gzfrozen.net`) && PathPrefix(`/notls`)
          kind: Rule
          services:
              - name: whoami
                port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: ingressroutetls
    namespace: default
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host(`whoami.gzfrozen.net`) && PathPrefix(`/tls`)
          kind: Rule
          services:
              - name: whoami
                port: 80
    tls:
        certResolver: myresolver

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: traefikdashboardtls
    namespace: default
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host(`whoami.gzfrozen.net`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
          kind: Rule
          services:
              - name: api@internal
                kind: TraefikService
    tls:
        certResolver: myresolver
